--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://romanf89.github.io/mesto-react/",
+  "homepage": "https://romanf89.github.io/mesto-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -18,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build/static"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
